<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Name -->
    <string name="app_name">AcronoDroid</string>

    <!-- Main Activity -->
    <string name="search_acronyms">Search acronyms...</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="add_folder">Add Folder</string>
    <string name="no_acronyms_found">No acronyms found</string>
    <string name="no_results">No results</string>

    <!-- Categories -->
    <string name="all">All</string>
    <string name="programming">Programming</string>
    <string name="web">Web</string>
    <string name="networking">Networking</string>
    <string name="database">Database</string>
    <string name="software">Software</string>

    <!-- Detail Activity -->
    <string name="bookmark">Bookmark</string>
    <string name="definition">Definition</string>
    <string name="example_usage">Example Usage</string>
    <string name="usage_context">Usage Context</string>

    <!-- Bookmarks Activity -->
    <string name="my_folders">My Folders</string>
    <string name="no_folders">No folders</string>
    <string name="no_folders_yet">No folders yet</string>
    <string name="create_folder_hint">Tap + to create your first folder</string>

    <!-- Folder Activity -->
    <string name="folder_icon">Folder Icon</string>
    <string name="more_options">More options</string>
    <string name="empty_folder">Empty folder</string>
    <string name="folder_is_empty">This folder is empty</string>
    <string name="bookmark_acronyms_hint">Bookmark acronyms to save them here</string>

    <!-- Dialogs -->
    <string name="create_new_folder">Create New Folder</string>
    <string name="folder_name">Folder name</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="save_to_folder">Save to Folder</string>
    <string name="choose_folder_subtitle">Choose a folder to save this acronym</string>
    <string name="selected">Selected</string>

    <!-- Actions -->
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>

    <!-- Messages -->
    <string name="folder_created">Folder created successfully</string>
    <string name="folder_deleted">Folder deleted</string>
    <string name="acronym_bookmarked">Acronym saved to folder</string>
    <string name="error_empty_name">Please enter a folder name</string>

</resources>